lab6, started to add component classes

--- a/GamesProgramming2labs/GamesProgramming2labs/GamesProgramming2labs.vcxproj
+++ b/GamesProgramming2labs/GamesProgramming2labs/GamesProgramming2labs.vcxproj
@@ -80,10 +80,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Component.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameObjectcpp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
